Adds About Me page.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,33 @@
 
 <div class="row">
   <div class="leftcolumn">
-    <h2>Nothing to see here...</h2>
-    <p>This page is still under development.</p>
+    <h2>About Me</h2>
+    <p>
+      My name is Elijah Goossen 
+      and I am studying Electrical Engineering 
+      at Dordt College, soon to be Dordt University.
+    </p>
+
+    <p>
+      I grew up in Nairobi, Kenya, as a missionary kid.
+      When I was nine years old,
+      we moved back to the states
+      and I started attending Omaha Christian Academy in Omaha, NE.
+      I love to read science fiction and fantasy
+      and enjoy watching sports with my friends.
+    </p>
+    
+    <p>
+      I found out about Dordt through some families at school
+      who had children that attended Dordt.
+      When I visited, I really liked the feel of the campus community
+      and the high priority that the faculty and staff put on their faith.
+      I have been challenged in my faith while attending Dordt,
+      especially in reconciling different perspectives
+      about various theological topics,
+      but I think that God will use this challenge to strengthen my faith
+      and help me trust in Him.
+    </p>
   </div>
 </div>
 
