Adds paper abstract and modifies nav-menu to handle hierarchies.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h2>Learning Portfolio</h2>
 </div>
 
-<nav-menu></nav-menu>
+<nav-menu root-dir="./"></nav-menu>
 
 <div class="row">
   <div class="leftcolumn">
