Adds pdf for calvinism-and-engineering.

--- a/portfolio/ksp131/calvinism-and-engineering.html
+++ b/portfolio/ksp131/calvinism-and-engineering.html
@@ -32,6 +32,8 @@
       This break helps me reduce stress during a mental block
       and helps me focus later.
     </p>
+
+    <a href="calvinism-and-engineering.pdf" target="_blank">Read Here!</a>
   </div>
 </div>
 
