--- a/portfolio/ksp342/a-christian-view-of-rhetoric.html
+++ b/portfolio/ksp342/a-christian-view-of-rhetoric.html
@@ -20,7 +20,7 @@
 
 <div class="row">
   <div class="leftcolumn">
-    <h2>Calvinism and Engineering</h2>
+    <h2>A Christian View of Rhetoric</h2>
     <p>
       This essay was my first introduction to the history of rhetoric.
       Even though rhetoric is not one of my favorite subjects,
@@ -44,7 +44,7 @@
   </div>
 </div>
 
-<my-footer rev-date="1 Mar 2024"></my-footer>
+<my-footer rev-date="7 Mar 2019"></my-footer>
 
 </body>
 
