--- a/portfolio/ksp342/yahweh-vs-allah.html
+++ b/portfolio/ksp342/yahweh-vs-allah.html
@@ -20,7 +20,7 @@
 
 <div class="row">
   <div class="leftcolumn">
-    <h2>Calvinism and Engineering</h2>
+    <h2>Yahweh vs. Allah</h2>
     <p>
       This essay was fun to write because I enjoy learning
       about different religions and how they compare to each other.
@@ -44,7 +44,7 @@
   </div>
 </div>
 
-<my-footer rev-date="1 Mar 2024"></my-footer>
+<my-footer rev-date="15 Apr 2019"></my-footer>
 
 </body>
 
